<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civUser"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_people"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvJobdescPeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/people_jobdesc" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/yellow_color"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_gravity="end|center_vertical"
            android:text="@string/invite_btn"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>